feat(auth) Registration, login, activation
