# src/project/apidoc/static/yaml/openapi.yaml
@@ -144,7 +144,7 @@ paths:
         204:
           description: NO CONTENT
         500:
-          $ref: resources/responses.yaml#InternalServerErro
+          $ref: resources/responses.yaml#InternalServerError
 
   /auth/passwords:
 
@@ -158,4 +158,17 @@ paths:
         204:
           description: NO CONTENT
         500:
-            $ref: resources/responses.yaml#InternalServerErro
+            $ref: resources/responses.yaml#InternalServerError
+
+    post:
+      summary: 08. Password update
+      description: Complete the password reset
+      tags:
+        - Auth
+
+      responses:
+        201:
+          description: CREATED
+        500:
+            $ref: resources/responses.yaml#InternalServerError
+
