# src/project/routes/auth.py
@@ -1,6 +1,8 @@
 from flask import Blueprint, request
+from flask_jwt_extended import jwt_required, get_jwt_identity
+
+from src.project.app import response, schema, validator
 from src.project.services import AuthService
-from src.project.app import validator, schema, response
 
 auth_bp = Blueprint("auth", __name__)
 
@@ -24,9 +26,23 @@ def create_registration():
     return response.build(registration, 201)
 
 
+@auth_bp.post("/auth/activations")
+@validator(
+    "json",
+    {
+        "email": ["required", "max:150"],
+        "code": ["required", "min:6", "max:10"],
+    },
+)
+def activate_registration():
+    activation = AuthService.activate_registration()
+    return request.json, 201
+
+
 @auth_bp.post("/auth/tokens")
 def create_token():
-    return request.json, 201
+    tokens = AuthService.login()
+    return response.build(tokens)
 
 
 @auth_bp.put("/auth/tokens")
@@ -44,6 +60,15 @@ def delete_password():
     return None, 204
 
 
-@auth_bp.post("/auth/passowords")
+@auth_bp.post("/auth/passwords")
 def create_password():
     return request.json, 204
+
+
+@auth_bp.get("/auth/me")
+@jwt_required()
+def get_my_info():
+
+    identity = get_jwt_identity()
+    user = AuthService.me(identity)
+    return response.build(user)
